Fix z-index

--- a/static/styles/main.sass
+++ b/static/styles/main.sass
@@ -31,6 +31,7 @@ body
     text-shadow: 2px 2px 2px #444
     top: 80px
     font-size: 42px
+    z-index: 1
 
   h3
     @extend h2
